--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="center">
+<!-- 	<div id="center">
 		<p>TEXT CENTER</p>
-	</div>
+	</div> -->
     <script type="text/javascript" src="./script.js">
 </script>
 
